--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -31,24 +31,33 @@
         <nav>
             <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
-                <ul class="gnbTab">
-                    <li>
-                        <a href="./Store.html"  class="store">여행상점</a>
-                    </li>
-                    <li>
-                        <a href="./Community_Group.html"  class="community">커뮤니티</a>
-                    </li>
-                </ul>
-                <div class="userHead">
-                    <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
-                    <ul class="userList">
-                        <li>유저 닉네임</li>
-                        <li><a href="./Community_Group.html">마이페이지</a></li>
-                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li><a href="./login.html">로그아웃</a></li>
+                <div class="gnbInner">
+                    <ul class="gnbTab">
+                        <li>
+                            <a href="./store.html" class="store">여행상점</a>
+                        </li>
+                        <li>
+                            <a href="./Community_Group.html" class="community">커뮤니티</a>
+                        </li>
                     </ul>
+                    <div class="userHead">
+                        <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
+                        <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                        <ul class="userList">
+                            <li>유저 닉네임</li>
+                            <li><a href="./Mypage_mymain.html">마이페이지</a></li>
+                            <li><a href="./adm_calendar.html">관리자 일정</a></li>
+                            <li><a href="./login.html">로그아웃</a></li>
+                        </ul>
+                    </div>
                 </div>
+
+                <button class="menuTrigger">
+                    <span class="blind">메뉴보기</span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
         </nav>
     </header>
@@ -57,7 +66,6 @@
         <form action="" class="payWrap">
             <div class="buyerInfo">
                 <h1>예약하기</h1>
-                <div class="bIline"></div>
                 <h2>예약자 정보</h2>
                 <div class="buyerInfoList">
                     <div class="nameGen">
@@ -152,7 +160,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="payLine"></div>
                     <h3 class="hP">결제 방식</h3>
                     <div class="howPay">
                         <button id="cardPay">카드 결제</button>
