--- a/Community_Group.html
+++ b/Community_Group.html
@@ -79,7 +79,8 @@
                     <input type="text" name="schBox" placeholder="여행지를 검색해보세요">
                     <button type="button"></button>
                 </form>
-                <button type="button" class="sortBtn">조회순</button>
+                <input type="checkbox" class="sortBtn" id="sort" value="">
+                <label for="sort">조회순</label>
             </div>
             <a href="./Community_WriteGro.html" class="postBtn">작성하기</a>
         </div>
