--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -103,7 +103,7 @@
                 <div class="itemInfoInner">
                     <div class="infoTop">
                         <h1>결제하기</h1>
-                        <span>
+                        <span class="langAll">
                             <input type="radio" name="lang" id="langKor" class="lBtn">
                             <label for="langKor"></label>
                             <input type="radio" name="lang" id="langUs" class="lBtn">
